# observatory-monitor

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.zencoder/rules/: repo.md  roadmap.md
config/: config.yaml.example  simulator-ocs.yaml  simulator-onstepx.yaml  simulator.yaml.example
docs/: ROADMAP_GUI_BUILDER.md
resources/models/: Dome.gltf  MountAzimuth.gltf  Pier.gltf  Tube.gltf
resources/qml/: CircularGauge.qml  Dashboard.qml  Dome.qml  LevelGauge.qml  MountAzimuth.qml  PhysicalRelationship.qml  Pier.qml  SceneComposer.qml  SceneGizmo.qml  SceneInspector.qml  SceneNode.qml  ShutterStatus.qml  Tube.qml  main.qml
resources/qml/meshes/: dome_mesh.mesh  mountAzimuth_mesh.mesh  pier_mesh.mesh  tube_mesh.mesh
resources/qml/widgets/: AnalogWidget.qml  BinaryWidget.qml  NumericWidget.qml
src/main/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/shared/: AbstractController.h  CMakeLists.txt  CapabilityRegistry.cpp  CapabilityRegistry.h  Config.cpp  Config.h  ControllerListModel.cpp  ControllerListModel.h  ControllerManager.cpp  ControllerManager.h  ControllerPoller.cpp  ControllerPoller.h  ControllerProxy.cpp  ControllerProxy.h  LayoutConfig.cpp  LayoutConfig.h  Logger.cpp  Logger.h  MqttClient.cpp  MqttClient.h  MqttController.cpp  MqttController.h  SimulatorConfig.cpp  SimulatorConfig.h  Types.h  ValueMappingEngine.cpp  ValueMappingEngine.h  version.cpp
src/simulator/: CMakeLists.txt  simulator_main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_layout.cpp  test_logger.cpp
